<resources>
    <string name="app_name">Briftreger</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="existing_account_question">Already have an account?</string>
    <string name="select_photo">Select photo</string>
    <string name="sign_out">Sign out</string>
    <string name="create_new_message">Create new message</string>
    <string name="select_user">Select user</string>
    <string name="chat_log">Chat</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="reset_button">Reset password</string>
    <string name="forgot_password_question">Forgot password</string>
</resources>