<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A77979"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:id="@+id/username_input_registration"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_input_register_login"
        android:ems="10"
        android:hint="@string/username"
        android:textColorHint="@color/material_dynamic_neutral50"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_photo_registration" />

    <EditText
        android:id="@+id/email_input_registration"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_input_register_login"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/material_dynamic_neutral50"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input_registration" />

    <EditText
        android:id="@+id/password_input_registration"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_input_register_login"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/material_dynamic_neutral50"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_registration" />

    <Button
        android:id="@+id/register_button_registration"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_button"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_registration" />

    <TextView
        android:id="@+id/have_account_input_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/existing_account_question"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button_registration" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_photo_registration"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/circlular_button"
        android:text="@string/select_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/circular_image_preview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="4dp"
        app:civ_border_color="@color/design_default_color_primary_dark"
        app:layout_constraintBottom_toBottomOf="@+id/select_photo_registration"
        app:layout_constraintEnd_toEndOf="@+id/select_photo_registration"
        app:layout_constraintStart_toStartOf="@+id/select_photo_registration"
        app:layout_constraintTop_toTopOf="@+id/select_photo_registration" />
</androidx.constraintlayout.widget.ConstraintLayout>