<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A77979"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username_input_registration"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:layout_marginTop="236dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/username"
        android:paddingStart="20dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_input_registration"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input_registration" />

    <EditText
        android:id="@+id/password_input_registration"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_registration" />
</androidx.constraintlayout.widget.ConstraintLayout>