<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A77979">

    <EditText
        android:id="@+id/email_input_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_input_register_login"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/material_dynamic_neutral50"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_input_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_input_register_login"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/material_dynamic_neutral50"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_login" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_button"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_login" />
</androidx.constraintlayout.widget.ConstraintLayout>